--- a/platform-ui/public/css/app/ilimi.css
+++ b/platform-ui/public/css/app/ilimi.css
@@ -2002,18 +2002,21 @@ input.validation-error {
     padding: 20px;
 }
 
+.padBottom10 {
+    padding-bottom: 10px; 
+}
+
 .margin0 {
     margin: 0 !important;
+    padding: 0 !important;
 }
 
 .borderBottomSolid {
-    padding-bottom: 10px; 
     border-bottom: 1px solid #ddd;
 }
 
 .carouselImg {
-    width: 240px !important;
-    height: 130px !important;
+    height: 180px !important;
 }
 
 #playImg {
