--- a/platform-ui/public/templates/player/game.html
+++ b/platform-ui/public/templates/player/game.html
@@ -1,3 +1,14 @@
+<style type="text/css">
+.grayText {
+  color: #999 !important;
+  background: none repeat scroll 0 0 #f9f9f9 !important;
+}
+.gameTitleSection {
+  background: none repeat scroll 0 0 #f9f9f9; 
+  margin-bottom: 10px; 
+  margin-top: 10px;
+}
+</style>
 <div class="MywallActivity">
 	<div class=" wallActivityHeader">
 		<div class="editContent">
@@ -9,45 +20,70 @@
                 	{{selectedConcept.metadata.name}}
                 </h2>
             </div>
-            <div class="col-md-12 noPad padTop marginBottom15 borderBottomSolid">
+            <div class="col-md-12 noPad padTop marginBottom15 borderBottomSolid gameTitleSection">
             	<div class="col-md-3 noPad">
-            		<img ng-src="{{selectedConcept.metadata.posterImage}}" style="width: 100%; height: 100%" ng-if="selectedConcept.metadata.posterImage"/>
-            		<img src="/img/not_available.jpg" style="width: 100%; height: 100%" ng-if="!selectedConcept.metadata.posterImage"/>
+            		<img ng-src="{{selectedConcept.metadata.posterImage}}" ng-if="selectedConcept.metadata.posterImage"/>
+            		<img src="/img/not_available.jpg" ng-if="!selectedConcept.metadata.posterImage"/>
+                <div class="col-md-12 noPad marginTop10 marginBottom15">
+                    <span class="badge greenBadge marginRight15">Screener</span>
+                    <span class="badge greenBadge marginRight15">Mock</span>
+                </div>
             	</div>
             	<div class="col-md-9">
-            		<div class="des_container">
-                    <span class="des_content">
-                    	{{selectedConcept.metadata.description}}
+            		  <div class="des_container col-md-12 noPad marginBottom15 borderBottomSolid">
+                    <span ng-if="selectedConcept.metadata.description.length > 300" ng-show="!showFullDesc">
+                      <span class="des_content col-md-12 noPad" ng-bind-html="renderHtmlTrim(selectedConcept.metadata.description, 300)">
+                      </span>
+                      <a href="javascript:void()" ng-click="moreDescription()" class="pull-right" style="position: relative; bottom: 20px;">more...</a>
                     </span>
+                    <span ng-if="selectedConcept.metadata.description.length <= 300">
+                      <span class="des_content col-md-12 noPad padBottom10" ng-bind-html="renderHtml(selectedConcept.metadata.description)">
+                      </span>
+                    </span>
+                    <span class="des_content col-md-12 noPad padBottom10" ng-bind-html="renderHtml(selectedConcept.metadata.description)" ng-show="showFullDesc">
+                    </span>
+                    <a href="javascript:void()" ng-click="lessDescription()" class="pull-right" style="position: relative; bottom: 20px;" ng-show="showFullDesc">less...</a>
                 	</div>
-                	<div>
-                		<span class="pull-left marRight50 marginTop10" ng-if="selectedConcept.metadata.developer">
-                			<span>Developed by: </span><a href="javascript: void(0)"><h3 class="margin0">{{selectedConcept.metadata.developer}}</h3></a>
-                		</span>
-                		<span class="pull-left marRight50 marginTop10" ng-if="selectedConcept.metadata.owner">
-                			Owned by: <a href="javascript: void(0)"><h3 class="margin0">{{selectedConcept.metadata.owner}}</h3></a>
-                		</span>
+                  <div class="col-md-12 noPad marginBottom10">
+                    <div class="col-md-4 noPad">
+                        Downloads<a href="javascript: void(0)"><h4 class="margin0 grayText">35</h4></a>
+                    </div>
+                    <div class="col-md-4 noPad">
+                        Total Gaming Time<a href="javascript: void(0)"><h4 class="margin0 grayText">34 Hrs 23 Mins</h4></a>
+                    </div>
+                    <div class="col-md-4 noPad">
+                        Avg. Gaming Time<a href="javascript: void(0)"><h4 class="margin0 grayText">17 Mins</h4></a>
+                    </div>
+                  </div> 
+                	<div class="col-md-12 noPad padBottom10">
+                    <div class="col-md-4 noPad">
+                        Developed by<a href="javascript: void(0)"><h4 class="margin0 grayText">{{selectedConcept.metadata.developer}}</h4></a>
+                    </div>
+                    <div class="col-md-4 noPad">
+                        Owned by: <a href="javascript: void(0)"><h4 class="margin0 grayText">{{selectedConcept.metadata.owner}}</h4></a>
+                    </div>
                 	</div>
             	</div>
             </div>
             <div class="col-md-12 noPad padTop marginBottom15">
-            	<ul class="bxslider" ng-if="selectedConcept.screenshots && selectedConcept.screenshots.length > 0">
-  					<li ng-repeat="screenshot in selectedConcept.screenshots">
-  						<a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'image'" ng-click="viewScreenShot(screenshot)">
-  							<img ng-src="{{screenshot.mediaUrl}}" class="carouselImg" ng-if="screenshot.mediaUrl"/>
-  							<img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.mediaUrl"/>
-  						</a>
-  						<a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'video'" ng-click="viewScreenShot(screenshot)">
-  							<img ng-src="{{screenshot.posterImage}}" class="carouselImg" ng-if="screenshot.posterImage"/>
-  							<img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.posterImage"/>
-  							<div id="playImg">
-  								<i class="fa fa-play"></i>
-  							</div>
-  						</a>  						
-  					</li>
-				</ul>
-				<div class="modal fade image-view-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-					<div class="modal-dialog modal-lg">
+              <ul class="bxslider" ng-if="selectedConcept.screenshots && selectedConcept.screenshots.length > 0">
+                <li ng-repeat="screenshot in selectedConcept.screenshots">
+  						    <a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'image'" ng-click="viewScreenShot(screenshot)">
+                    <img ng-src="{{screenshot.mediaUrl}}" class="carouselImg" ng-if="screenshot.mediaUrl"/>
+                    <img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.mediaUrl"/>
+  						    </a>
+  						    <a href="javascript:void(0)" data-toggle="modal" data-target=".image-view-modal" ng-if="screenshot.mediaType == 'video'" ng-click="viewScreenShot(screenshot)">
+  							   <img ng-src="{{screenshot.posterImage}}" class="carouselImg" ng-if="screenshot.posterImage"/>
+  							   <img src="/img/not_available.jpg" class="carouselImg" ng-if="!screenshot.posterImage"/>
+  							   <div id="playImg">
+  								    <i class="fa fa-play"></i>
+  							   </div>
+  						    </a>  						
+                </li>
+            </ul>
+
+				    <div class="modal fade image-view-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
 				    	<div class="modal-content">
 				    		<button type="button" class="pull-right marRight30 close" data-dismiss="modal" aria-label="Close">
 				    			<i class="writeBlackOne fa fa-times"></i>
@@ -63,11 +99,11 @@
 				    		</div>
 				    	</div>
   					</div>
-				</div>
-        	</div> 
-        	<div class="col-md-12 noPad padBottom">
-        		<div ng-include="'metadata_categories_template.html'"></div>
-        	</div>   	
+				  </div>
+        </div> 
+        <div class="col-md-12 noPad padBottom">
+          <div ng-include="'metadata_categories_template.html'"></div>
+        </div>   	
 		</div>		
 	</div>
 </div>
