--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -21,6 +21,14 @@
                         <label class="control-label">Logo</label>
                         <input type="text" ng-model="newGame.appIcon" class="form-control"/>
                     </div>
+                    <div class="form-group col-md-6 required">
+                        <label class="control-label">Owner</label>
+                        <input type="text" ng-model="newGame.owner" class="form-control"/>
+                    </div>
+                    <div class="form-group col-md-6 required">
+                        <label class="control-label">Developer</label>
+                        <input type="text" ng-model="newGame.developer" class="form-control"/>
+                    </div>
                     <div class="form-group col-md-6">
                         <label>Description</label>
                         <textarea class="form-control" rows="4" ng-model="newGame.description"></textarea>
