--- a/platform-ui/views/includes/left-sidebar.ejs
+++ b/platform-ui/views/includes/left-sidebar.ejs
@@ -26,5 +26,17 @@
 			</li>
 		</ul>
 	</li>
+
+	<li class="dropdown forumsTab common_box" ng-if="dashboardLinks && dashboardLinks.title">
+		<div class="dropdown dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown">
+			<i class="forumsImg"></i>
+			<span class="lefttab">{{dashboardLinks.title}}</span>
+		</div>
+		<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" ng-if="dashboardLinks.links">
+			<li role="presentation" ng-repeat="link in dashboardLinks.links">
+				<a href="{{link.url}}" target="_blank">{{link.title}}</a>
+			</li>
+		</ul>
+	</li>
 </ul>
 </div>
