--- a/platform-ui/public/templates/player/gameList.html
+++ b/platform-ui/public/templates/player/gameList.html
@@ -33,6 +33,10 @@
                         <label>Description</label>
                         <textarea class="form-control" rows="4" ng-model="newGame.description"></textarea>
                     </div>
+                    <div class="form-group col-md-12">
+                        <label>Comments</label>
+                        <textarea class="form-control" rows="4" ng-model="newGame.comment"></textarea>
+                    </div>
                 </div>
                 <div class="col-md-12 padBottom">
                     <div class="alert alert-danger" ng-show="newGame.errorMessages.length > 0">
