--- a/platform-ui/public/templates/player/learningMap.html
+++ b/platform-ui/public/templates/player/learningMap.html
@@ -33,6 +33,10 @@
 	            		<label>Description</label>
 	            		<textarea class="form-control" rows="4" ng-model="newConcept.description"></textarea>
 	            	</div>
+	            	<div class="form-group col-md-12">
+	            		<label>Comments</label>
+	            		<textarea class="form-control" rows="4" ng-model="newConcept.comment"></textarea>
+	            	</div>
             	</div>
             	<div class="col-md-12 padBottom">
             		<div class="alert alert-danger" ng-show="newConcept.errorMessages.length > 0">
